Fix Integration-Tests