@@ -142,6 +142,35 @@
             <version>3.2.4</version>
         </dependency>
 
+
+        		<!-- https://mvnrepository.com/artifact/javax.xml.soap/javax.xml.soap-api -->
+<!--        		<dependency>-->
+<!--        			<groupId>javax.xml.soap</groupId>-->
+<!--        			<artifactId>javax.xml.soap-api</artifactId>-->
+<!--        		</dependency>-->
+
+<!--                <dependency>-->
+<!--                    <groupId>javax.xml.bind</groupId>-->
+<!--                    <artifactId>jaxb-api</artifactId>-->
+<!--                </dependency>-->
+<!--                <dependency>-->
+<!--                    <groupId>com.sun.xml.bind</groupId>-->
+<!--                    <artifactId>jaxb-core</artifactId>-->
+<!--                </dependency>-->
+<!--                <dependency>-->
+<!--                    <groupId>com.sun.xml.bind</groupId>-->
+<!--                    <artifactId>jaxb-impl</artifactId>-->
+<!--                </dependency>-->
+        <dependency>
+            <groupId>com.sun.xml.bind</groupId>
+            <artifactId>jaxb-impl</artifactId>
+            <version>2.3.8</version>
+        </dependency>
+        <dependency>
+            <groupId>com.sun.xml.messaging.saaj</groupId>
+            <artifactId>saaj-impl</artifactId>
+            <version>1.5.1</version>
+        </dependency>
     </dependencies>
 
     <profiles>
@@ -203,6 +232,9 @@
                         <reuseForks>false</reuseForks>
                         <!-- We should NOT ignore IT test failures. TestFailureIgnore should be false. -->
                         <testFailureIgnore>false</testFailureIgnore>
+                        <argLine>
+                        --add-opens=java.base/java.lang=ALL-UNNAMED             --add-opens=java.base/java.lang.invoke=ALL-UNNAMED
+                        </argLine>
                     </configuration>
                     <executions>
                         <execution>
